@@ -1,27 +1,0 @@
-#undef HAVE_SYS_SOCKIO_H
-#undef HAVE_SYS_PARAM_H
-
-#undef HAVE_LIBPTHREAD
-#undef HAVE_GETHOSTBYNAME_R_GLIBC
-#undef HAVE_GETHOSTBYNAME_R_SOLARIS
-#undef HAVE_GETHOSTBYNAME_R_HPUX
-#undef HAVE_GETHOSTBYNAME_R_GLIB_MUTEX
-
-#undef HAVE_SOCKADDR_SA_LEN
-
-#undef GNET_MAJOR_VERSION
-#undef GNET_MINOR_VERSION
-#undef GNET_MICRO_VERSION
-#undef GNET_INTERFACE_AGE
-#undef GNET_BINARY_AGE
-
-/* #undef PACKAGE */
-/* #undef VERSION */
-
-
-
-
-/* Leave that blank line there!!  Autoheader needs it.
-   If you're adding to this file, keep in mind:
-   The entries are in sort -df order: alphabetical, case insensitive,
-   ignoring punctuation (such as underscores).  */
